# whisper_features_gpu

./: README.md  encoder.py  pyproject.toml  test.py
